[project]
name = "pzfx-tools"
version = "0.1.1"
description = "GraphPad pzfx Tools"
readme = "README.md"
authors = [
    { name = "Christoph Sommer", email = "christoph.sommer@ist.ac.at" }
]
requires-python = ">=3.11"
dependencies = [
    "rich>=14.3.3",
]

[project.scripts]
pzfx-fill = "pzfx_tools.pzfx_fill:main"
pzfx-fill-frequency = "pzfx_tools.pzfx_fill_frequency:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
